[package]
name = "devtool"
authors = ["Heliax AG <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "3.1.18", features = ["derive"] }

tokio = {version = "1.8.2", features = ["full"]}

borsh = "0.9.0"
ron = "0.7.0"

hex = "0.4.3"

hyper = { version = "0.14.20", features = ["full"] }

eyre = "0.6.5"
color-eyre = "0.5.10"

tracing = "0.1.30"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.3.7", features = ["env-filter"]}

# b3de39edeb8181bd89f867f6a3a92af6cf9088f0 = branch james/ethbridge/experimental
namada = {git = "https://github.com/anoma/namada.git", rev = "b3de39edeb8181bd89f867f6a3a92af6cf9088f0", features = ["testing"]}
namada_apps = {git = "https://github.com/anoma/namada.git", rev = "b3de39edeb8181bd89f867f6a3a92af6cf9088f0"}

# this should be the same as the root workspace Cargo.toml [patch.crates-io] of the ledger repo
[patch.crates-io]
# TODO backported patch in the noise protocl for <https://github.com/libp2p/rust-libp2p/pull/2264>, blocked on libp2p upgrade <https://github.com/anoma/anoma/pull/751>
libp2p = {git = "https://github.com/heliaxdev/rust-libp2p.git", rev = "1abe349c231eb307d3dbe03f3ffffc6cf5e9084d"}
# TODO temp patch for <https://github.com/near/borsh-rs/issues/82>, <https://github.com/near/borsh-rs/issues/84> and more tba.
borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-schema-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
# borsh = {path = "../borsh-rs/borsh"}
# borsh-derive = {path = "../borsh-rs/borsh-derive"}
# borsh-derive-internal = {path = "../borsh-rs/borsh-derive-internal"}
# borsh-schema-derive-internal = {path = "../borsh-rs/borsh-schema-derive-internal"}