[package]
name = "devtool"
authors = ["Heliax AG <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "3.1.18", features = ["derive"] }

tokio = { version = "1.8.2", features = ["full"] }

borsh = "0.9.0"
ron = "0.7.0"

hex = "0.4.3"

hyper = { version = "0.14.20", features = ["full"] }

eyre = "0.6.5"
color-eyre = "0.5.10"

tracing = "0.1.30"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }

namada_apps = { git = "https://github.com/anoma/namada.git?branch=eth-bridge-integration", rev = "10e283f16a3c06a4999259c5ad1db0d78fa04788" }
namada = { git = "https://github.com/anoma/namada.git?branch=eth-bridge-integration", rev = "10e283f16a3c06a4999259c5ad1db0d78fa04788", features = [
    "testing",
] }

# these patches should be a subset of the patches of the root workspace Cargo.toml (i.e. [patch.crates-io]) of the ledger repo
[patch.crates-io]
# TODO temp patch for <https://github.com/near/borsh-rs/issues/82>, <https://github.com/near/borsh-rs/issues/84> and more tba.
borsh = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
borsh-derive = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
borsh-derive-internal = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
borsh-schema-derive-internal = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
# The following 3 crates patch a work-around for https://github.com/smol-rs/polling/issues/38 breaking namada tooling build with nightly 2022-05-20
polling = { git = "https://github.com/heliaxdev/polling.git", rev = "02a655775282879459a3460e2646b60c005bca2c" }
async-io = { git = "https://github.com/heliaxdev/async-io.git", rev = "9285dad39c9a37ecd0dbd498c5ce5b0e65b02489" }
async-process = { git = "https://github.com/heliaxdev/async-process.git", rev = "e42c527e87d937da9e01aaeb563c0b948580dc89" }
# borsh = {path = "../borsh-rs/borsh"}
# borsh-derive = {path = "../borsh-rs/borsh-derive"}
# borsh-derive-internal = {path = "../borsh-rs/borsh-derive-internal"}
# borsh-schema-derive-internal = {path = "../borsh-rs/borsh-schema-derive-internal"}

# patched to a commit on the `eth-bridge-integration+consensus-timeout` branch of our fork
tendermint = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "e6c684731f21bffd89886d3e91074b96aee074ba" }
tendermint-config = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "e6c684731f21bffd89886d3e91074b96aee074ba" }
tendermint-proto = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "e6c684731f21bffd89886d3e91074b96aee074ba" }
tendermint-rpc = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "e6c684731f21bffd89886d3e91074b96aee074ba" }
tendermint-light-client-verifier = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "e6c684731f21bffd89886d3e91074b96aee074ba" }

# patched to a commit on the `eth-bridge-integration` branch of our fork
ibc = { git = "https://github.com/heliaxdev/ibc-rs.git", rev = "f4703dfe2c1f25cc431279ab74f10f3e0f6827e2" }
ibc-proto = { git = "https://github.com/heliaxdev/ibc-rs.git", rev = "f4703dfe2c1f25cc431279ab74f10f3e0f6827e2" }

# patched to a commit on the `eth-bridge-integration` branch of our fork
tower-abci = { git = "https://github.com/heliaxdev/tower-abci.git", rev = "fcc0014d0bda707109901abfa1b2f782d242f082" }

# workaround to <https://github.com/ferrilab/bitvec/issues/199>
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
